--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Afrah Mohammed | Portfolio</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
   <!-- Simple Navbar -->
@@ -12,6 +13,8 @@
       <a href="#about">About</a> |
       <a href="#projects">Projects</a> |
       <a href="#contact">Contact</a>
+      
+      <button id="themeToggle">🌙</button>
     </nav>
     <h1>Afrah Mohammed — Portfolio</h1>
     <p>Computer Science student who enjoys building simple web projects</p>
@@ -25,7 +28,6 @@
       I'm passionate about technology, problem-solving, and building creative projects.
       I enjoy learning new programming skills, exploring web development, and turning ideas into reality 🚀.
     </p>
-    
   </section>
 
   <!-- Projects Section -->
@@ -41,7 +43,6 @@
         join student clubs more easily. My role included designing the user interface
         and improving user experience.
       </p>
-      <!-- Replace the src below with your image path: assets/images/clubzone.png -->
       <img src="assets/images/clubzone.png" alt="CLUBZONE Project" width="400">
     </article>
 
@@ -53,7 +54,6 @@
         performed analysis, and visualized results to understand player behavior and
         system performance. I practiced data handling, problem-solving, and teamwork.
       </p>
-      <!-- Replace the src below with your image path: assets/images/online-gaming.png -->
       <img src="assets/images/online-gaming.png" alt="Online Gaming Data Analysis" width="400">
     </article>
 
@@ -65,7 +65,6 @@
         analyzing the benefits of investing in the Saudi Electricity Company.
         It strengthened my research, academic writing, and presentation skills.
       </p>
-      <!-- Replace the src below with your image path: assets/images/saudi-electricity.png -->
       <img src="assets/images/saudi-electricity.png" alt="Saudi Electricity Presentation" width="400">
     </article>
   </section>
@@ -76,7 +75,7 @@
     <form>
       <label>
         Name
-        <input type="text" name="name" placeholder="Afrah mohammad" required>
+        <input type="text" name="name" placeholder="Afrah Mohammed" required>
       </label>
       <br>
       <label>
@@ -94,5 +93,11 @@
   </section>
 
   
+
+ 
+  <button id="backToTop" title="Go to top">⬆️</button>
+
+  <!-- JavaScript -->
+  <script src="js/script.js"></script>
 </body>
 </html>
