--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       <label>
         Email
         <!-- Update placeholder if you change your email -->
-        <input type="email" name="email" placeholder="Afrah3000r@gmail.com" required>
+        <input type="email" name="email" placeholder="My email is Afrah3000r@gmail.com" required>
       </label>
       <br>
       <label>
